# blog

./: .secrets.baseline  Cargo.toml  Dockerfile  Makefile  README.md  tailwind.config.js
.direnv/: flake-profile-5-link
.github/workflows/: gh-pages-deploy.yml
public/assets/: face2.glb  me.mtl
public/scripts/: collapsible_lists.js
src/: app.rs  components.rs  lib.rs  main.rs  pages.rs  scene.rs
src/components/: analytics.rs  footer.rs  header.rs  main.rs
src/pages/: home.rs  posts.rs  resources.rs  trinkets.rs
src/styles/: globals.css  main.css
