[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7", optional = true }
chrono = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
gray_matter = "0.2"
http = "1"
icondata = { version = "0.3" }
include_dir = "0.7"
itertools = "0.11"
leptos = { version = "0.6", features = ["nightly"] }
leptos_axum = { version = "0.6", optional = true }
leptos_icons = { version = "0.3" }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
log = "0.4"
once_cell = "1.10.0"
pulldown-cmark = "0.9"
serde = "1.0"
styled = "0.2.0"
stylers = "0.3.1"
stylist = "0.13.0"
thiserror = "1.0"
three-d = "0.17.0"
three-d-asset = {version = "0.7",features = ["obj", "gltf", "png", "jpeg", "http"] }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
winit = "0.28"


[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "styled/csr"]
ssr = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:leptos_axum", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:tracing",   "stylist/ssr", "styled/ssr",]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
assets-dir = "public"
bin-features = ["ssr"]
lib-features = ["hydrate"]
tailwind-input-file = "src/styles/globals.css"
watch-additional-files = ["content/"]
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
